--- a/src/components/layout/NavBar.css
+++ b/src/components/layout/NavBar.css
@@ -51,8 +51,8 @@
 }
 
 .custom-nav  .logo {
-    color: rgb(233, 217, 0);
-    font-size: 1.5rem;
+    color:white;
+    font-size: 2rem;
     font-family: 'Lobster Two', cursive;
 }
 
