--- a/src/components/Page.css
+++ b/src/components/Page.css
@@ -15,13 +15,13 @@
 .page-body {
     display: flex;
     justify-content: flex-start;
-    align-items: flex-start;
+    align-items: center;
     flex-direction: column;
     flex-wrap: wrap;
     font-weight: 400;
     max-height: 90%;
     opacity: 0;
-    animation: fade 0.5s ease forwards 0.5s;
+    animation: fade 0.4s ease forwards 0.4s;
     overflow: auto;
 }
 
