--- a/src/pages/LoginPage.css
+++ b/src/pages/LoginPage.css
@@ -75,3 +75,12 @@
     transition-property:background,color;
     transition-duration:.2s;
 }
+
+.register-btn a:link {
+    color:white;
+}
+
+a:link, a:visited, a:hover, a:active {
+    text-decoration: none;
+    color:white;
+}
