--- a/src/App.css
+++ b/src/App.css
@@ -227,6 +227,12 @@ li {
     background-color: #ddd;
 }
 
+.collection-end {
+    background-color: white;
+    height: 150px;
+    padding-bottom: 100px;
+}
+
 .center {
     text-align: center;
 }
