--- a/src/components/Page.css
+++ b/src/components/Page.css
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&display=swap');
 
+.page {
+    width: 100vw;
+    height: 90vh;
+    color: #000;
+    font-family: 'Raleway', sans-serif;
+    overflow: auto;
+  }
+
 .page-header {
     display: flex;
     justify-content: space-between;
@@ -19,16 +27,15 @@
     flex-direction: column;
     flex-wrap: wrap;
     font-weight: 400;
-    overflow: auto;
 }
 
-.page-body::-webkit-scrollbar {
+.page::-webkit-scrollbar {
     background-color: rgba(233, 217, 0, 0.575);
     border-radius: 20px;
-    width: 5px;
+    width: 8px;
 }
 
-.page-body::-webkit-scrollbar-thumb {
+.page::-webkit-scrollbar-thumb {
     background-color: rgb(51, 51, 51);
     border-radius: 25px;
 }
